# colheita-feliz-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP_GUIDE.md  compile_commands.json  watch.sh
.claude/working/: .heartbeat.fp  heartbeat.md
src/: Animal.h  AnimalAssets.h  AnimalLogica.h  Assets.h  Config.h  Constantes.h  Crops.h  Decoracao.h  Deposito.h  Desenho.h  GameState.h  Hud.h  HudAssets.h  Iso.h  Loja.h  Missoes.h  PainelBase.h  PainelMissoes.h  PainelSettings.h  Player.h  RecompensaDiaria.h  SaveGame.h  Sons.h  TelaTitulo.h  Tipos.h  Toolbar.h  game.cpp  main.cpp
